Strapi order workflow initial state implemented

--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -154,6 +154,7 @@
       "calculatedAtCheckout": "Calculated at checkout"
     },
     "placeOrder": "Place Order",
+    "payWithStripe": "Pay with Stripe",
     "processing": "Processing..."
   },
   "faq": {
