--- a/app/i18n/locales/pt/translation.json
+++ b/app/i18n/locales/pt/translation.json
@@ -154,6 +154,7 @@
       "calculatedAtCheckout": "Calculado no checkout"
     },
     "placeOrder": "Fazer pedido",
+    "payWithStripe": "Pagar com Stripe",
     "processing": "Processando..."
   },
   "faq": {
