--- a/app/i18n/locales/fr/translation.json
+++ b/app/i18n/locales/fr/translation.json
@@ -298,9 +298,12 @@
       "date": "Date de Commande",
       "customer": "Client",
       "email": "Email",
+      "phone": "Téléphone",
       "shippingAddress": "Adresse de Livraison",
       "addressNotAvailable": "Informations d'adresse non disponibles",
-      "shippingMethod": "Méthode de Livraison"
+      "shippingMethod": "Méthode de Livraison",
+      "tracking": "Suivi",
+      "trackPackage": "Suivre le Colis"
     },
     "items": {
       "title": "Articles de la Commande",
@@ -310,18 +313,52 @@
     "status": {
       "title": "Statut de la Commande",
       "paymentConfirmed": "Paiement confirmé et commande en cours de traitement",
-      "trackingCode": "Code de Suivi",
+      "tracking": "Suivi",
+      "unpaid": {
+        "title": "Paiement en Cours",
+        "description": "Votre commande a été passée et nous confirmons votre paiement. Cela prend généralement quelques minutes.",
+        "secondaryTitle": "Vérification du Paiement en Cours",
+        "secondaryDescription": "Nous traitons de manière sécurisée votre paiement avec notre processeur de paiement. Cette étape garantit que votre transaction est autorisée et protégée."
+      },
       "pending": {
         "title": "Paiement en Cours",
-        "description": "Votre commande a été passée et nous confirmons votre paiement. Cela prend généralement quelques minutes."
+        "description": "Votre commande a été passée et nous confirmons votre paiement. Cela prend généralement quelques minutes.",
+        "secondaryTitle": "Vérification du Paiement en Cours",
+        "secondaryDescription": "Nous traitons de manière sécurisée votre paiement avec notre processeur de paiement. Cette étape garantit que votre transaction est autorisée et protégée."
       },
       "paid": {
         "title": "Paiement Confirmé",
-        "description": "Votre paiement a été confirmé et votre commande est en cours de préparation pour l'expédition."
+        "description": "Votre paiement a été confirmé et votre commande est en cours de préparation pour l'expédition.",
+        "secondaryTitle": "Préparation de la Commande en Cours",
+        "secondaryDescription": "Notre équipe prépare soigneusement vos articles pour l'expédition. Nous vous notifierons dès que votre colis sera en route."
       },
       "shipped": {
         "title": "Commande Expédiée",
-        "description": "Votre commande a été expédiée et est en route vers vous."
+        "description": "Votre commande a été expédiée et est en route vers vous.",
+        "secondaryTitle": "Colis en Transit",
+        "secondaryDescription": "Votre commande voyage maintenant vers votre adresse. Vous pouvez suivre son progrès en utilisant le lien de suivi ci-dessus."
+      },
+      "completed": {
+        "title": "Commande Livrée",
+        "description": "Votre commande a été livrée avec succès à votre adresse.",
+        "secondaryTitle": "Livraison Réussie",
+        "secondaryDescription": "Votre colis est arrivé en toute sécurité à votre adresse. Nous espérons que vous apprécierez votre achat !",
+        "message": "Merci pour votre achat !",
+        "submessage": "Nous espérons que vous apprécierez vos produits. Envisagez de laisser un avis ou de faire des achats chez nous à nouveau."
+      },
+      "problem": {
+        "title": "Problème avec la Commande",
+        "description": "Il y a un problème avec votre commande. Veuillez contacter notre équipe de support pour obtenir de l'aide.",
+        "secondaryTitle": "Action Requise - Contacter le Support",
+        "secondaryDescription": "Nous avons rencontré un problème qui nécessite une attention immédiate. Notre équipe de support est prête à vous aider à résoudre cela rapidement.",
+        "message": "Action Requise",
+        "submessage": "Veuillez contacter immédiatement notre équipe de support pour résoudre ce problème avec votre commande."
+      },
+      "canceled": {
+        "title": "Commande Annulée",
+        "description": "Votre commande a été annulée. Aucun montant n'a été débité de votre compte.",
+        "secondaryTitle": "Annulation de Commande Confirmée",
+        "secondaryDescription": "Votre commande a été annulée avec succès et aucun montant n'a été traité. Vous pouvez passer une nouvelle commande à tout moment."
       },
       "paymentProcessing": "Traitement du Paiement",
       "paymentProcessingDescription": "Nous confirmons votre paiement avec notre processeur de paiement. Cela prend généralement quelques minutes. Vous recevrez un email de confirmation une fois le paiement confirmé."
@@ -348,5 +385,10 @@
       "title": "Notre Magasin | Boutique E-commerce",
       "description": "Visitez notre magasin à Porto et découvrez nos produits en personne."
     }
+  },
+  "shipping": {
+    "title": "Informations de Livraison",
+    "notes": "Notes de Commande",
+    "method": "Méthode de livraison"
   }
 }
